syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";

option go_package = "telematics-generator/protobuf";

message TelematicsDataProto {
  int32 vehicle_id = 1;
  int64 timestamp = 2;
  int32 speed = 3;
  double latitude = 4;
  double longitude = 5;
}

message RangeDataRequest {
  int64 from_timestamp = 1;
  int64 to_timestamp = 2;
}

service TelematicsDataService {
  rpc GetLatestData(google.protobuf.Empty) returns (TelematicsDataProto);

  rpc GetRangeData(RangeDataRequest) returns (stream TelematicsDataProto);
}
